// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a full image set properly 1`] = `
.c7 {
  height: 45px;
  position: relative;
  margin-left: 40px;
  text-align: right;
}

.c7 > svg {
  height: 98%;
}

.c0 {
  position: absolute;
  bottom: 20px;
  left: 20px;
  min-height: 50px;
  width: auto;
  max-width: calc(100% - 80px);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
  background: rgba(255,255,255,0.8);
  box-shadow: 0 0 10px 0 rgba(0,0,0,0.3);
  padding: 20px;
  cursor: pointer;
}

.c0:hover {
  background: rgba(0,0,0,0.6);
  color: white;
}

.c0:hover .c6 {
  fill: white;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 50px;
}

.c2 {
  font-family: Unica77LLWebMedium,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 19px;
  line-height: 1.5em;
  margin-bottom: 8px;
  line-height: 1.1em;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  font-family: Unica77LLWebMedium,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
  line-height: 1.4em;
}

.c5 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
  line-height: 1.4em;
  margin-left: 20px;
}

@media (max-width:600px) {
  .c7 {
    display: none;
  }
}

@media (max-width:600px) {
  .c2 {
    font-family: Unica77LLWebMedium,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 16px;
    line-height: 1.1em;
  }
}

@media (max-width:600px) {
  .c4 {
    font-family: Unica77LLWebMedium,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 12px;
    line-height: 1.4em;
  }
}

@media (max-width:600px) {
  .c5 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 12px;
    line-height: 1.4em;
  }
}

<div
  style={
    Object {
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    className="c0"
    onClick={[Function]}
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        The Work of Bruce M. Sherman
      </div>
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          View Slideshow
        </div>
        <div
          className="c5"
        >
          3
           Images
        </div>
      </div>
    </div>
    <div
      className="c6 c7"
    >
      <svg
        className="image-set"
        viewBox="0 0 44 44"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6760.67,551.72h-32v-32h32v32Zm-30-2h28v-28h-28v28Z"
          transform="translate(-6728.67 -507.72)"
        />
        <polygon
          points="38 37 36 37 36 8 7 8 7 6 38 6 38 37"
        />
        <polygon
          points="44 31 42 31 42 2 13 2 13 0 44 0 44 31"
        />
      </svg>
    </div>
  </div>
  <img
    alt="The Work of Bruce M. Sherman"
    height="auto"
    src="https://d7hftxdivxxvm.cloudfront.net?resize_to=width&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2F0aRUvnVgQKbQk5dj8xcCAg%2Flarger.jpg&width=1200&quality=80"
    width="100%"
  />
</div>
`;

exports[`renders a mini image set properly 1`] = `
.c8 {
  height: 45px;
  position: relative;
  margin-left: 40px;
  text-align: right;
}

.c8 > svg {
  height: 98%;
}

.dDNcaQ:hover .c7 {
  fill: white;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 100%;
}

.c0 {
  height: 100px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  padding: 10px 20px 10px 10px;
  border: 1px solid #e5e5e5;
  cursor: pointer;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: auto;
  margin-left: 20px;
}

.c3 {
  font-family: Unica77LLWebMedium,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 19px;
  line-height: 1.5em;
  margin-bottom: 8px;
  line-height: 1.1em;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  font-family: Unica77LLWebMedium,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
  line-height: 1.4em;
}

.c6 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
  line-height: 1.4em;
  margin-left: 20px;
}

@media (max-width:600px) {
  .c8 {
    display: none;
  }
}

@media (max-width:600px) {
  .c3 {
    font-family: Unica77LLWebMedium,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 16px;
    line-height: 1.1em;
  }
}

@media (max-width:600px) {
  .c5 {
    font-family: Unica77LLWebMedium,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 12px;
    line-height: 1.4em;
  }
}

@media (max-width:600px) {
  .c6 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 12px;
    line-height: 1.4em;
  }
}

<div
  style={
    Object {
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    className="c0"
    onClick={[Function]}
  >
    <img
      alt="The Work of Bruce M. Sherman"
      height="100%"
      src="https://d7hftxdivxxvm.cloudfront.net?resize_to=width&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2F0aRUvnVgQKbQk5dj8xcCAg%2Flarger.jpg&width=1200&quality=80"
      width="auto"
    />
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          The Work of Bruce M. Sherman
        </div>
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            View Slideshow
          </div>
          <div
            className="c6"
          >
            3
             Images
          </div>
        </div>
      </div>
      <div
        className="c7 c8"
      >
        <svg
          className="image-set"
          viewBox="0 0 44 44"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6760.67,551.72h-32v-32h32v32Zm-30-2h28v-28h-28v28Z"
            transform="translate(-6728.67 -507.72)"
          />
          <polygon
            points="38 37 36 37 36 8 7 8 7 6 38 6 38 37"
          />
          <polygon
            points="44 31 42 31 42 2 13 2 13 0 44 0 44 31"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
